--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="https://portalcidadao.riobranco.ac.gov.br/img/logoRioBrancoHorizontal.png?pfdrid_c=true" rel="icon" type="image/png">
+  <link href="https://portalcidadao.riobranco.ac.gov.br/img/logoRioBrancoHorizontal.png?pfdrid_c=true" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
