--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -9,8 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="https://portalcidadao.riobranco.ac.gov.br/img/logoRioBrancoHorizontal.png?pfdrid_c=true" rel="icon" type="image/png">
-  <link href="https://portalcidadao.riobranco.ac.gov.br/img/logoRioBrancoHorizontal.png?pfdrid_c=true" rel="apple-touch-icon">
+  <link href="assets/img/favconrbo.png" rel="icon" type="image/png">
+  <link href="assets/img/favconrbo.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -252,10 +252,11 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.png" class="img-fluid" alt=""></a>
+                <img src="assets/img/iptu2024.png" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
-                  <h4><a href="https://notapremiada.riobranco.ac.gov.br/#/login" title="Veja">Nota Premiada</a></h4>
-                  <p>O objetivo do Nota Premiada é estimular as pessoas a pedirem nota fiscal onde normalmente não solicitam e melhorar a arrecadação própria da Prefeitura de Rio Branco.</p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-iptu/" title="Veja">Emissão de
+                    IPTU 2024</a></h4>
+                  <p>O serviço de emissão de IPTU (Imposto Predial e Territorial Urbano) para o ano de 2024 permite que os contribuintes acessem e gerem seus boletos para pagamento do imposto de forma prática e segura através do Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
