--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -60,7 +60,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           
           <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
+
           <img src="https://portalcidadao.riobranco.ac.gov.br/img/logoRioBrancoHorizontal.png?pfdrid_c=true" alt="Brasão do Portal" class="img-fluid">
           <span></span>
         </a>
@@ -68,11 +68,10 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="#" class="active">Inicio<br></a></li>
-            <li><a href="#">Portal da Transparência</a></li>
-            <li><a href="#">Ouvidoria</a></li>
-            <li><a href="#">Acesso a Informação</a></li>
-            <li><a href="#">Diário Oficial</a></li>
-            <li><a href="#">Entre em contato</a></li>
+            <li><a href="https://transparencia.riobranco.ac.gov.br/">Portal da Transparência</a></li>
+            <li><a href="https://www.riobranco.ac.gov.br/?page_id=10312">Ouvidoria</a></li>
+            <li><a href="http://portalcgm.riobranco.ac.gov.br/lai/">Acesso a Informação</a></li>
+            <li><a href="https://diario.ac.gov.br/">Diário Oficial</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
