--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -379,13 +379,13 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4">
             <div class="content px-xl-5">
               <h3><span><strong>FAQ</strong> - Portal do Contribuinte da Prefeitura de Rio Branco </span></h3>
             </div>
           </div>
 
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-8">
 
             <div class="faq-container">
               <div class="faq-item faq-active">
