--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -375,12 +375,9 @@
 
     <!-- Faq Section -->
     <section id="faq" class="faq section">
-
       <div class="container">
-
         <div class="row gy-4">
-
-          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4">
             <div class="content px-xl-5">
               <h3><span>Perguntas Frequentes </span><strong>(FAQ)</strong></h3>
               <p>
@@ -388,9 +385,7 @@
               </p>
             </div>
           </div>
-
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-
+          <div class="col-lg-8">
             <div class="faq-container">
               <div class="faq-item faq-active">
                 <h3><span class="num">1.</span> <span>Non consectetur a erat nam at lectus urna duis?</span></h3>
