--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -385,7 +385,7 @@
             </div>
           </div>
 
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-8">
 
             <div class="faq-container">
               <div class="faq-item faq-active">
