--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -68,10 +68,10 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="#" class="active">Inicio<br></a></li>
-            <li><a href="https://transparencia.riobranco.ac.gov.br/">Portal da Transparência</a></li>
-            <li><a href="https://www.riobranco.ac.gov.br/?page_id=10312">Ouvidoria</a></li>
-            <li><a href="http://portalcgm.riobranco.ac.gov.br/lai/">Acesso a Informação</a></li>
-            <li><a href="https://diario.ac.gov.br/">Diário Oficial</a></li>
+            <li><a href="https://transparencia.riobranco.ac.gov.br/" target="_blank">Portal da Transparência</a></li>
+            <li><a href="https://www.riobranco.ac.gov.br/?page_id=10312" target="_blank">Ouvidoria</a></li>
+            <li><a href="http://portalcgm.riobranco.ac.gov.br/lai/" target="_blank">Acesso a Informação</a></li>
+            <li><a href="https://diario.ac.gov.br/" target="_blank">Diário Oficial</a></li>
 
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
