--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -221,7 +221,7 @@
     <section id="portfolio" class="portfolio section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-down">
         <h2>SERVIÇOS DISPONIVEIS </h2>
         <p>Serviços Disponiveis aos contribuintes</p>
       </div><!-- End Section Title -->
