--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -28,11 +28,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Impact
-  * Template URL: https://bootstrapmade.com/impact-bootstrap-business-website-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
+  * Template Name: PMRBO
   ======================================================== -->
 </head>
 
@@ -207,21 +203,12 @@
 
     </section><!-- /Clients Section -->
 
-    
-
-
-
- 
-
-
-
-   
-
+  
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-down">
+      <div class="container section-title">
         <h2>SERVIÇOS DISPONIVEIS </h2>
         <p>Serviços Disponiveis aos contribuintes</p>
       </div><!-- End Section Title -->
@@ -230,7 +217,7 @@
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+          <ul class="portfolio-filters isotope-filters">
             <li data-filter="*" class="filter-active">Todos</li>
             <li data-filter=".filter-app">Para o cidadão</li>
             <li data-filter=".filter-product">Para empresa</li>
@@ -238,7 +225,7 @@
             <li data-filter=".filter-books">Books</li>
           </ul><!-- End Portfolio Filters -->
 
-          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+          <div class="row gy-4 isotope-container">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
@@ -495,8 +482,7 @@
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
+
         Designed by <a href="https://bootstrapmade.com/">Joomla</a>
       </div>
     </div>
