--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -229,9 +229,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-1.png" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/app-1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="https://notapremiada.riobranco.ac.gov.br/#/login" title="Veja">Nota Premiada</a></h4>
+                  <h4><a href="https://notapremiada.riobranco.ac.gov.br/#/login" title="Veja" target="_blank">Nota Premiada</a></h4>
                   <p>O objetivo do Nota Premiada é estimular as pessoas a pedirem nota fiscal onde normalmente não solicitam e melhorar a arrecadação própria da Prefeitura de Rio Branco.</p>
                 </div>
               </div>
@@ -239,9 +239,9 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/iptu2024.png" class="img-fluid" alt=""></a>
+                <img src="assets/img/iptu2024.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-iptu/" title="Veja">Emissão de
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-iptu/" title="Veja" target="_blank">Emissão de
                     IPTU 2024</a></h4>
                   <p>O serviço de emissão de IPTU (Imposto Predial e Territorial Urbano) para o ano de 2024 permite que os contribuintes acessem e gerem seus boletos para pagamento do imposto de forma prática e segura através do Portal do Contribuinte.</p>
                 </div>
@@ -250,50 +250,50 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/branding-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Branding 1</a></h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-boletim-de-cadastro-mobiliario/" title="Veja" target="_blank">Emissão do Boletim de Cadastro Imobiliário</a></h4>
+                  <p>O serviço de emissão do Boletim de Cadastro Imobiliário permite que os proprietários e interessados acessem e gerem um relatório detalhado sobre a situação cadastral de um imóvel através do portal do contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/books-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Books 1</a></h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-boletim-de-cadastro-imobiliario/" title="Veja" target="_blank">Consulta e Impressão de imóveis</a></h4>
+                  <p>O serviço de Consulta e Impressão de Imóveis permite que proprietários e interessados acessem informações detalhadas sobre imóveis registrados e imprimam relatórios diretamente através do Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/app-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">App 2</a></h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/nota-avulsa/" title="Veja" target="_blank">Emissão/Consulta de Notas Fiscais Avulsas</a></h4>
+                  <p>O serviço de Emissão e Consulta de Notas Fiscais Avulsas disponibiliza a geração e o acompanhamento de notas fiscais através do Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/product-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Product 2</a></h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4><a href="https://riobranco.g-mus.com.br/consultapaciente#laboratorio" title="Veja" target="_blank">Consulta de Exames Laboratoriais</a></h4>
+                  <p>O serviço de Consulta de Exames Laboratoriais permite aos cidadãos acessar de forma rápida e prática os resultados de exames realizados em unidades de saúde vinculadas ao Sistema Único de Saúde (SUS) através do Portal do Contribuinte. </p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/branding-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Branding 2</a></h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/empresas/" title="Veja" target="_blank">Emissão de Alvará</a></h4>
+                  <p>O serviço de Emissão de Alvará permite que empresários e gestores de empresas solicitem e obtenham alvarás necessários para o funcionamento de seus negócios dentro do município.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
