--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -248,6 +248,17 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/EMISSÃO DE ALVARÁ.png" class="img-fluid" alt=""></a>
+                <div class="portfolio-info">
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-iptu/" title="Veja">Emissão de Alvara</a></h4>
+                  <p>A emissão de alvarás autoriza atividades como abrir empresas, realizar eventos ou fazer obras, seguindo as normas municipais. Esses documentos são essenciais para garantir que tudo esteja legalizado e em conformidade com a lei.
+                  </p>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
                 <a href="assets/img/portfolio/branding-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt=""></a>
