--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -300,19 +300,19 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/books-2.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">Books 2</a></h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/consulta-de-debitos/" title="Veja" target="_blank">Consulta de Débitos</a></h4>
+                  <p>O serviço de Consulta de Débitos oferece ao contribuinte a possibilidade de verificar e acompanhar suas pendências financeiras com a prefeitura de maneira rápida e prática através do Portal do Contribuinte</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/app-3.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt=""></a>
+                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">App 3</a></h4>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/itbis/" title="More Details">Emissão de Laudos de ITBI (Imposto de Transmissão de Bens Imóveis)</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                 </div>
               </div>
