--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -623,7 +623,7 @@
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">BR - GOV</span>
+            <span class="sitename">Prefeitura Municipal de Rio Branco</span>
           </a>
           <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
           <div class="social-links d-flex mt-4">
@@ -669,12 +669,12 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">BR - GOV</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">PMRBO</strong> <span>Todos os direitos reservados</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
 
-        Designed by <a href="https://bootstrapmade.com/">Joomla</a>
+        <a href="#">Assesoria de Tecnologia da Informação - SEFIN</a>
       </div>
     </div>
 
