--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -213,7 +213,7 @@
                         </div>
                         <div class="portfolio-info">
                         <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-boletim-de-cadastro-mobiliario/" title="Emissão do Boletim de Cadastro Mobiliário" target="_blank">Emissão do Boletim de Cadastro Imobiliário</a></h4>
-                        <p>A emissão do Boletim de Cadastro Imobiliário permite gerar relatórios detalhados sobre imóveis pelo portal do contribuinte.</p>
+                        <p>A emissão do Boletim de Cadastro Imobiliário permite gerar relatórios detalhados sobre imóveis pelo portal do contribuinte./p>
                         </div>
                         </div>
                         </div>
