--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -252,7 +252,7 @@
               <div class="portfolio-content h-10">
                 <img src="assets/img/emissaodealvara.jpeg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
-                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-iptu/" title="Veja">Emissão de Alvara</a></h4>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/empresas/" title="Veja">Emissão de Alvara</a></h4>
                   <p>A emissão de alvarás autoriza atividades como abrir empresas, realizar eventos ou fazer obras, seguindo as normas municipais. Esses documentos são essenciais para garantir que tudo esteja legalizado e em conformidade com a lei.
                   </p>
                 </div>
@@ -295,16 +295,6 @@
                 <div class="portfolio-info">
                   <h4><a href="https://riobranco.g-mus.com.br/consultapaciente#laboratorio" title="Consulta dos Resultados de Exames Laboratoriais" target="_blank">Consulta de Exames Laboratoriais</a></h4>
                   <p>O serviço de Consulta de Exames Laboratoriais permite aos contribuintes acessar de forma rápida e prática os resultados de exames realizados em unidades de saúde vinculadas ao Sistema Único de Saúde (SUS) através do Portal do Contribuinte. </p>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-10">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
-                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/empresas/" title="Consulta e Emissão de Alvarás" target="_blank">Emissão de Alvará</a></h4>
-                  <p>O serviço de Emissão de Alvará permite que empresários e gestores de empresas solicitem e obtenham alvarás necessários para o funcionamento de seus negócios dentro do município.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
